<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginFragment">

        <EditText
            android:id="@+id/username"
            style="@style/InputFieldWithBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="226dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/username_hint"
            android:inputType="textPersonName|text"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/react_background"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username">

            <EditText
                android:id="@+id/password"
                style="@style/InputField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_mono"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:typeface="monospace" />

            <ImageView
                android:id="@+id/password_image_view"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:paddingLeft="4dp"
                android:paddingRight="8dp"
                tools:src="@drawable/anim_cut_the_eye" />

        </LinearLayout>

        <Button
            android:id="@+id/login"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="82dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="82dp"
            android:text="@string/login"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/register"
            style="@style/CustomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/login"
            app:layout_constraintStart_toStartOf="@+id/login"
            app:layout_constraintTop_toBottomOf="@+id/progress_linear" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_linear"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:indeterminate="false"
            android:progress="100"
            app:layout_constraintEnd_toEndOf="@+id/login"
            app:layout_constraintStart_toStartOf="@+id/login"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:trackColor="@android:color/transparent"
            app:trackThickness="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>