<resources>
    <string name="app_name">DataStore Test</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_back">Welcome Back</string>

    <string name="registration_success">Registration Success</string>
    <string name="login_error">Wrong username or password</string>

    <string name="new_messages">You have %1$d new messages</string>
    <string name="gen_new_messages_label">Generate New Messages</string>
    <string name="logout">Logout</string>
</resources>